# offboard_multi

./: .gitignore  CMakeLists.txt  README.md  package.xml
inc/: ActionCircle.hpp  Avoidance.hpp  Calculate.hpp  Cinc.hpp  DataMan.hpp  FlightManager.hpp  Multi_formation.hpp  PathCreator.hpp  avoidance.hpp  init.hpp  multi_offboard.hpp  pid.h  pid.hpp  util.h
inc/PCL/: IMap.hpp  OctoMap.hpp  PCLROSMessageManager.hpp
inc/VehicleControl/: IVehicleControl.hpp  MultBoatControl.hpp  MultDroneControl.hpp  MultUUVControl.hpp
inc/action/: ActionMotionPlan.hpp  Avoidance.hpp  IMsgRosManager.hpp  Multi_UAV_formation.hpp  Multi_USV_formation.hpp  USV2ActionMotionPlan.hpp  USV3ActionMotionPlan.hpp
inc/log/: Chlog.hpp
inc/motion_plan/bspline/: non_uniform_bspline.h
inc/motion_plan/bspline_opt/: bspline_optimizer.h
inc/motion_plan/mp_core/: FastPathFinder.h  IPathFinder.h  MPManager.h  MPPublisher.h
inc/motion_plan/path_searching/: kinodynamic_astar.h  topo_prm.h
inc/motion_plan/plan_env/: IMap.hpp  OctoMap.hpp  edt_environment.h  sdf_map.h
inc/motion_plan/plan_manage/: plan_container.hpp  traj_server.hpp
inc/motion_plan/poly_traj/: polynomial_traj.h  use_cuda.cuh
inc/motion_plan/traj_utils/: planning_visualization.h
inc/new_struct/: Avoidance.hpp  IControlFunction.hpp  IMsgRosManager.hpp  IVehicle.hpp  MsgRosManager.hpp  Multi_UAV_formation.hpp  Multi_USV_formation.hpp  Multi_formation.hpp  USV_Avoidance.hpp
inc/serial/: MasterDroneConnection.hpp  serialConnection.hpp
inc/test/: ActionCircle.hpp
inc/test/1UAV_1USV/: uav_ros_Manager.hpp  usv_lead_uav.hpp  usv_ros_Manager.hpp
inc/test/2uav-usv/: dataMan.hpp  uav1_ros_Manager.hpp  uav2_ros_Manager.hpp  uav_lead_uav.hpp  usv1_ros_Manager.hpp
inc/test/2uav2/: avoidance.hpp  dataMan.hpp  uav1_ros_Manager.hpp  uav2_ros_Manager.hpp  uav_lead_uav.hpp
inc/test/3USVs/: avoidance.hpp  dataMan.hpp  usv1_ros_Manager.hpp  usv2_ros_Manager.hpp  usv3_ros_Manager.hpp  usv5_ros_Manager.hpp  usv7_ros_Manager.hpp  usv_lead_usv.hpp  usvs_control.hpp
inc/test/4UAVs/: dataMan.hpp  msgRos.hpp  uav1_ros_Manager.hpp  uav2_ros_Manager.hpp  uav3_ros_Manager.hpp  uav4_ros_Manager.hpp  uavs_control.hpp
inc/test/7vehicles/: 7vehicles_control.hpp
inc/test/UUV_Control/: uuv1_ros_Manager.hpp
launch/: 1UAV_1USV.launch  MasterDrone.launch  MasterDroneTest.launch  MavlinkReceive.launch  USVOffboard.launch  image_to_video.launch  kino_algorithm.xml  kino_replan.launch  mavros_send.launch  multi_offboard.launch  offboard.launch  offboard.rviz  pcl.rviz  rosbag_log.launch  rviz.launch  slave_node.launch  topo_algorithm.xml
launch/real/: 1UAV_1USV_real.launch  1UAV_real.launch  2UAV_1usv_real.launch  2UAV_real.launch  2USV_real.launch  3USV_real_wifi.launch  4UAV_1usv_follow_real.launch  4UAV_real.launch  4UAV_real_wifi.launch  7UAV_real_wifi.launch
launch/sim/: 1UAV_1USV_sim.launch  2UAV_1usv_sim.launch  2UAV_sim.launch  3USV_sim.launch  4UAV_sim.launch  7Vehicles_sim.launch  multi_offboard_sim.launch
msg/: DronePosUpdate.msg
scripts/: 1uav-usv.qml  1uav-usv.qmlc  2uavs-1usv.qml  2uavs-1usv.qmlc  2uavs.qml  2uavs.qmlc  4uavs.qml  4uavs.qmlc  4uavs_3usvs.qml  4uavs_3usvs.qmlc
src/: ActionCircle.cpp  Avoidance.cpp  Calculate.cpp  CompressedToRaw.cpp  DataMan.cpp  FlightManager.cpp  Multi_formation.cpp  PID.cpp  PathCreator.cpp  RoPID_ext.cpp  avoidance.cpp  bag2csv.sh  init.cpp  main.cpp  multi_offboard.cpp  offboard.cpp  test.cpp  util.cpp
src/PCL/: OctoMap.cpp  PCLROSMessageManager.cpp
src/VehicleControl/: MultiBoatControl.cpp  MultiDroneControl.cpp  MultiUUVControl.cpp
src/action/: ActionCircle.cpp  ActionCircle_old.cpp  ActionMotionPlan.cpp  Avoidance.cpp  Multi_UAV_formation.cpp  Multi_USV_formation.cpp  USV2ActionMotionPlan.cpp  USV3ActionMotionPlan.cpp  USV_Avoidance.cpp
src/log/: ChLog.cpp
src/motion_plan/bspline/: non_uniform_bspline.cpp
src/motion_plan/bspline_opt/: bspline_optimizer.cpp
src/motion_plan/mp_core/: FastPathFinder.cpp  MPManager.cpp  MPPublisher.cpp
src/motion_plan/path_searching/: kinodynamic_astar.cpp
src/motion_plan/plan_env/: OctoMap.cpp  edt_environment.cpp  obj_generator.cpp  obj_predictor.cpp  octomap_planner.cpp  raycast.cpp  sdf_map.cpp
src/motion_plan/poly_traj/: polynomial_traj.cpp  use_cuda.cu
src/motion_plan/traj_utils/: planning_visualization.cpp
src/new_struct/: Avoidance.cpp  IMsgRosManager.cpp  MsgRosManager.cpp  Multi_UAV_formation.cpp  Multi_USV_formation.cpp  Multi_formation.cpp  USV_Avoidance.cpp
src/serial/: MasterDroneConnection.cpp  serialConnection.cpp
src/test/1UAV_1USV/: main.cpp  uav_ros_Manager.cpp  usv_lead_uav.cpp  usv_ros_Manager.cpp
src/test/2uavs/: avoidance.cpp  dataMan.cpp  main.cpp  uav1_ros_Manager.cpp  uav2_ros_Manager.cpp  uav_lead_uav.cpp
src/test/2uavs-1usv/: avoidance.cpp  dataMan.cpp  main.cpp  uav1_ros_Manager.cpp  uav2_ros_Manager.cpp  uav_lead_uav.cpp  usv1_ros_Manager.cpp
src/test/3USVs/: avoidance.cpp  dataMan.cpp  main.cpp  send_target.cpp  usv1_ros_Manager.cpp  usv2_ros_Manager.cpp  usv3_ros_Manager.cpp  usv6_ros_Manager.cpp  usv7_ros_Manager.cpp  usv_lead_usv.cpp  usvs_control.cpp
src/test/4UAVs/: main.cpp  msgRos.cpp  uav1_ros_Manager.cpp  uav2_ros_Manager.cpp  uav3_ros_Manager.cpp  uav4_ros_Manager.cpp  uavs_control.cpp
src/test/7Vehicles/: 7vechicles_control.cpp  main.cpp
src/test/USVOffboard/: main.cpp
src/test/UUV_Control/: uuv1_ros_Manager.cpp
